# mage

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: lexer.h  mage.h  parser.h
parser/: CMakeLists.txt
scripts/: build.bat  test.bat
src/: CMakeLists.txt  Doxyfile  lexer.c  mage.c  parser.c
tests/: CMakeLists.txt  test_ast.cpp  test_lexer.cpp
